Setting correct start page if no leaderboard provider is set

--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -4,7 +4,7 @@
 
 @inherits ReactiveComponent
 
-@page "/dashboard"
+@page "/"
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="full-height" Style="padding-top: 24px; padding-bottom: 24px;">
     @if (Player is not null)
