--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -203,7 +203,8 @@
                                          ShowHeader="false"
                                          HiddenColumns="[MapListColumn.ScoreEstimates]">
                                     <NoMapsContent>
-                                        No recent high PP gain maps. <MudButton Variant="Variant.Text" Color="MudBlazor.Color.Info" Href="/improve">Unlock your potential</MudButton>
+                                        No recent high PP gain maps.<br />
+                                        <MudButton Variant="Variant.Text" Color="MudBlazor.Color.Info" Href="/improve" StartIcon="@Icons.Filled.KeyboardDoubleArrowUp">Unlock your potential</MudButton>
                                     </NoMapsContent>
                                 </MapList>
                             </MudCard>
@@ -240,7 +241,8 @@
                                          ShowHeader="false"
                                          HiddenColumns="[MapListColumn.Pp]">
                                     <NoMapsContent>
-                                        No recommendations based on recent scores. <MudButton Variant="Variant.Text" Color="MudBlazor.Color.Info" Href="/improve">Unlock your potential</MudButton>
+                                        No recommendations based on recent scores.<br />
+                                        <MudButton Variant="Variant.Text" Color="MudBlazor.Color.Info" Href="/improve" StartIcon="@Icons.Filled.KeyboardDoubleArrowUp">Unlock your potential</MudButton>
                                     </NoMapsContent>
                                 </MapList>
                             </MudCard>
