--- a/MapMaven/Components/Maps/MapList.razor
+++ b/MapMaven/Components/Maps/MapList.razor
@@ -44,14 +44,14 @@
                     var difficulty = context.Item.Difficulty;
                     var chipStyle = $"border: 1px solid {DifficultyDisplayUtils.GetColor(difficulty?.Difficulty)}";
                 }
-                <MudChip Size="Size.Small" Variant="Variant.Outlined" Style="@chipStyle">
-                    @DifficultyDisplayUtils.GetShortName(difficulty?.Difficulty)
+                <MudChip Size="Size.Small" Variant="Variant.Outlined" Class="ma-0" Style="@chipStyle">
+                    @DifficultyDisplayUtils.GetShortName(difficulty?.Difficulty) | @difficulty?.Stars.ToString("#0.##") <MudIcon Icon="@Icons.Material.Filled.Star" />
                 </MudChip>
             </CellTemplate>
         </TemplateColumn>
         <TemplateColumn T="Map" Hidden="@HiddenColumns.Contains(MapListColumn.Pp)" CellClass="pa-1">
             <CellTemplate>
-                <MudChip Size="Size.Small">
+                <MudChip Size="Size.Small" Class="ma-0">
                     <span>@context.Item.HighestPlayerScore?.Score.Pp.ToString("#0.##") <b>pp</b></span>
                 </MudChip>
             </CellTemplate>
